--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r esm index.js --ignore db.json",
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "Scraper",
